Service Regression/.metadata/.plugins/com.provar.eclipse.ui/00DM0000001eO1fMAE/objects/SalesIQ__Account_Request__c.object
<CustomObject>
    <fields>
        <fullName>SalesIQ__Account_Status__c</fullName>
        <label>Account Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesIQ__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Requests</relationshipLabel>
        <relationshipName>Account_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SalesIQ__Approval_Notes__c</fullName>
        <label>Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesIQ__Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SalesIQ__Position_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Position Account</label>
        <referenceTo>SalesIQ__Position_Account__c</referenceTo>
        <relationshipLabel>Account Requests</relationshipLabel>
        <relationshipName>Account_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SalesIQ__Primary_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Requests (Primary Account)</relationshipLabel>
        <relationshipName>Account_Requests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SalesIQ__Request__c</fullName>
        <label>Request</label>
        <referenceTo>SalesIQ__Request__c</referenceTo>
        <relationshipLabel>Account Requests</relationshipLabel>
        <relationshipName>Account_Requests</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SalesIQ__Status_Image__c</fullName>
        <formula>IF( Text(SalesIQ__Request__r.SalesIQ__Status__c) = &apos;Pending&apos;, IMAGE(&quot;https://na17.salesforce.com/resource/1427198843000/pending&quot;, &quot;Pending&quot;), 
IF ( Text(SalesIQ__Request__r.SalesIQ__Status__c) = &apos;Approved&apos; , IMAGE(&quot;https://na17.salesforce.com/resource/1427198843000/approve&quot;, &quot;Approved&quot;), 
IMAGE(&quot;https://na17.salesforce.com/resource/1427198843000/reject&quot;, &quot;Rejected&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <label>Account Request</label>
    <listViews>
        <fullName>SalesIQ__Account_Requests</fullName>
        <columns>SalesIQ__Request__c</columns>
        <columns>SalesIQ__Account__c</columns>
        <columns>SalesIQ__Account_Status__c</columns>
        <columns>SalesIQ__Comments__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>SalesIQ__Status_Image__c</columns>
        <filterScope>Everything</filterScope>
        <label>Account Requests</label>
    </listViews>
    <listViews>
        <fullName>SalesIQ__All</fullName>
        <columns>SalesIQ__Request__c</columns>
        <columns>SalesIQ__Account__c</columns>
        <columns>SalesIQ__Account_Status__c</columns>
        <columns>SalesIQ__Primary_Account__c</columns>
        <columns>SalesIQ__Comments__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>SalesIQ__Position_Account__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AR-{0000}</displayFormat>
        <label>Account Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>